--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,195 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 10px;
+}
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 400 1.6rem/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url(../images/bgtile.png) repeat top left;
+  color: #333;
+}
+
+h1 {
+  color: #06365f;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+}
+
+.phones {
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: url(../images/phones.png) no-repeat center center / 50%;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.4);
+  margin: auto;
+  margin-top: 20px;
+}
+
+.phones img {
+  display: none;
+}
+
+.logo-row {
+  padding: 20px 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.logo {
+  width: 50%;
+}
+
+.home-btn {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px 15px;
+  color: #fff;
+  border: solid 1px #305d83;
+  border-radius: 3px;
+  background: linear-gradient(#7798b6 0%, #426f96 100%);
+}
+
+.icon {
+  margin-right: 10px;
+}
+
+.content-block {
+  background: none;
+  padding: 20px;
+  background: #fff;
+}
+
+nav {
+  padding: 10px 0;
+  width: 100%;
+  background: #fff;
+  order: -1;
+}
+
+nav:before {
+  content: "MENU";
+  margin-left: 20px;
+  font-weight: bold;
+  color: #1c5380;
+  font-size: 12px;
+}
+
+nav:hover > ul {
+  position: absolute;
+  display: block;
+  width: 100%;
+  padding: 5px 20px 10px 20px;
+  top: 32px;
+  left: 0;
+  list-style: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: bold;
+  color: #d2d3d4;
+  background: white;
+  z-index: 5;
+}
+
+nav:hover > ul:hover {
+  display: none;
+}
+
+nav ul {
+  display: none;
+}
+
+a {
+  color: #1c5380;
+  font-size: 12px;
+}
+
+/* Desktop Styles */
+@media (min-width: 640px) {
+  body {
+    background: url(../images/bgtile.png) repeat-x top left;
+  }
+
+  .container {
+    margin-top: 100px;
+  }
+  main {
+    justify-content: space-between;
+    flex-direction: row;
+  }
+
+  .phones {
+    border: none;
+    width: auto;
+    height: auto;
+    background: none;
+    box-shadow: none;
+    margin: auto;
+  }
+
+  .phones img {
+    height: auto;
+    display: flex;
+    margin-right: 60px;
+  }
+
+  .logo-row {
+    justify-content: space-between;
+  }
+
+  .home-btn {
+    justify-content: space-between;
+  }
+
+  .content-block {
+    background: url(../images/frame.png) no-repeat top center;
+    width: 504px;
+    padding: 30px;
+  }
+
+  nav {
+    width: 40%;
+    margin-bottom: 0;
+    order: 0;
+    margin-top: 40px;
+    padding: 20px 0;
+  }
+
+  nav:before {
+    content: "";
+  }
+
+  nav ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: bold;
+    color: #d2d3d4;
+  }
 }
