--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ body {
 .bue-header {
   position: absolute;
   background-color: #50789a;
-  height: 17rem;
+  height: 18rem;
   width: 100%;
 }
 
@@ -22,7 +22,7 @@ body {
   position: relative;
   display: flex;
   justify-content: center;
-  padding-top: 8rem;
+  padding-top: 7rem;
 }
 
 .left-body {
@@ -81,11 +81,11 @@ body {
 
 #white-box p {
   font-size: 1rem;
-  padding: 0 1.5rem 0rem 1.5rem;
+  padding: 0 1.5rem 0 1.5rem;
 }
 
 #stores {
-  padding: 0 1.5rem 0rem 1.5rem;
+  padding: 0.5rem 1.5rem 0rem 1.5rem;
   display: flex;
   justify-content: flex-start;
 }
