--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,121 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.up-blue {
+  background: linear-gradient(to bottom, #4f7ca2, #1c5380);
+  height: 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 0;
+}
+
+.up-blue > button {
+  background: linear-gradient(to bottom, #3a6b93, #1c5380);
+  color: white;
+  width: 6rem;
+  height: 3rem;
+  border-color: #06365f;
+  display: flex;
+  align-items: center;
+}
+.up-blue > img {
+  width: 26rem;
+  margin-left: 19rem;
+  padding-right: 6rem;
+}
+.up-blue > button > img {
+  margin-right: 0.7rem;
+}
+
+ul {
+  list-style-type: none;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+  padding: 1rem;
+  font-size: 1.5rem;
+}
+
+li a {
+  list-style-type: none;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+}
+
+.menu > span {
+  color: grey;
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding-top: 2rem;
+}
+
+.description {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 43rem;
+  width: 43rem;
+  top: -6rem;
+  left: -7rem;
+  position: relative;
+  z-index: 2;
+}
+
+h1 {
+  color: #1c5380;
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+}
+
+.central {
+  height: 30rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.phone {
+  left: 2rem;
+  top: -15rem;
+  position: relative;
+  z-index: 3;
+}
+
+.phone > img {
+  width: 25rem;
+}
+
+.description > p {
+  height: auto;
+  width: 32rem;
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.description > h1 {
+  height: auto;
+  width: 22rem;
+  padding: 1rem;
+  margin: 1rem;
+  left: -7rem;
+}
+
+.logos-apple-android {
+  display: flex;
+  justify-content: center;
+}
+
+.logos-apple-android > img {
+  margin: 1rem;
+  width: 10rem;
+}
