--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,109 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+@media [(media-features) ] {
+  // Styles
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0px;
+  padding: 50px 275px 50px 275px;
+  background: linear-gradient(180deg, #1c5380 30%, #FFF 0%);
 }
+
+a {
+  text-decoration: none;
+}
+
+/*------HEADER------*/
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-instagram-and-description {
+  margin-left: 45px;
+}
+
+.proportion-brand {
+  display: block;
+  width: 55%;
+  height: 55%;
+}
+
+.flex-instagram-and-login {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: -20px;
+}
+
+.log-in-button {
+  margin-top: 15px;
+  margin-right: 8px;
+  display: block;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 20%;
+  height: 40px;
+  text-align: center;
+  color: #FFF;
+  font-weight: bold;
+  background: linear-gradient(180deg, #1c5380 30%, #06365f 70%);
+  border: 2px solid #06365f;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+.container-description {
+  padding: 20px 50px;
+  margin: 20px 0 ;
+  background-image: url(../images/frame.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.container-description h2 {
+  color: #06365f;
+  padding-right: 180px;
+}
+
+.link-to-app-flex {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.link-to-app-flex img {
+  padding-top: 25px;
+  padding-right: 20px;
+}
+
+
+/*-------FOOTER----*/
+
+footer {
+  margin-top: 50px;
+}
+
+.container-ul {
+  padding: 0 120px 0 120px;
+}
+
+ul, li {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  font-weight: bold;
+  font-size: 12px;
+  color: #c4c4c4;
+}
+
+li > a {
+  color: #1c5380;
+}
+
