--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,77 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 400 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  box-sizing: border-box;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+.container {
+  margin-top: 100px;
+  justify-content: space-between;
+  flex-direction: row;
+}
+main {
+  display: flex;
+  flex-direction: row;
+}
+.phones {
+  border: none;
+  width: auto;
+  height: auto;
+  background: none;
+  box-shadow: none;
+  margin: auto;
+}
+
+.phones img {
+  height: auto;
+  display: flex;
+  margin-right: 60px;
+}
+
+.logo-block {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.log-btn {
+  margin-right: 150px;
+  margin-top: 20px;
+  background: linear-gradient(0deg, rgba(28,83,128,1) 0%, rgba(106,137,162,1) 81%);
+  border: 1px solid #06365f;
+  height: 30px;
+  width : 75px;
+}
+
+.text-block {
+  background: url(../images/frame.png) no-repeat top center;
+  width: 450px;
+  padding: 30px;
+  margin-right: 100px;
+}
+footer {
+  text-transform: uppercase;
+  font-weight: 500;
+  color: #1c5380;
+  width: 100%;
+  font-size: 18px;
+}
+footer ul {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: bold;
+  color: #06365f;
+}
+footer > ul :last-child {
+  color:gray;
 }
