--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,115 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  box-sizing: border-box;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  /* background-image: url(/images/plantilla.png); */
+
+  background: linear-gradient(to bottom, #1c5380 0%, #06365f 50%, white 50%, white 100%);
+  background-repeat: no-repeat;
+}
+
+#content {
+  max-width: 887px;
+  margin: 0 auto;
+  padding: 60px 80px 10px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+#content div.image {
+  width: 38%
+}
+
+#content div.image img {
+  width: 100%
+}
+
+#content div.text {
+  width: 60%;
+  padding-left: 30px
+}
+
+#content div.text .heder-text {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0px 20px;
+}
+
+#content div.text .heder-text>img {
+  width: 250px;
+}
+
+#content div.text .heder-text .button-home {
+  background: linear-gradient(to bottom, #1c5380 0%, #06365f 100%);
+  border: 1px solid #06365f;
+  padding: 8px 10px;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  border-radius: 3px;
+}
+
+#content div.text .heder-text .button-home img {
+  width: 20px;
+  margin-right: 10px;
+}
+
+.title-text {
+
+  background-image: url(/images/frame.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  border-radius: 4px;
+  padding: 25px;
+  font-size: 0.8rem;
+  line-height: 1.2rem;
+}
+
+.title-text h3 {
+  font-weight: bold;
+  color: #06365f;
+  font-size: 1.3rem;
+  line-height: 1.5rem;
+  margin: 0;
+}
+
+.buttons-stores {
+  margin-top: 30px;
+}
+
+.buttons-stores img {
+  height: 42px;
+  margin-right: 10px;
+}
+
+#footer {
+  padding: 20px;
+  font-size: 0.6rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+}
+
+#footer a {
+  text-decoration: none;
+  color: #06365f;
+  padding: 0px 5px
+}
+
+#footer span {
+  color: grey;
+  padding: 0px 0px 0px 20px
 }
