--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,86 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url(../images/bgtile.png) repeat-x top;
+}
+
+#container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 3rem 9rem 1rem;
+}
+
+.right-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5rem;
+  width: 40rem;
+}
+
+.top-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 30rem;
+  padding-right: 25px;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 3px;
+  color: white;
+  border: none;
+  box-shadow: 1px 1px 2px 1px rgb(2, 54, 122);
+  height: 40px;
+  width: 110px;
+  padding: 5px 10px;
+  background-image: linear-gradient(#3f719c, #3a6880);
+
+
+}
+
+.text-box {
+  padding: 15px 20px;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  width: 30rem;
+}
+
+.text-box p {
+  font-size: 14px;
+
+}
+
+h2 {
+  padding: 1,5rem 1rem;
+  color: #06365f
+}
+
+.download-box {
+  display: flex;
+  margin-top: 3.5rem;
+  margin-bottom: 0rem;
+  
+}
+
+.apple {
+  margin-right: 2rem;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+  justify-content: center;
+}
+
+ul > li{
+  padding: 0 0.6rem;
+  font-size: 14px;
+  font-weight: bold;
+  color: #3f719c;
 }
