--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,90 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+    height:100%;
+    background: linear-gradient(to bottom, #06365f 40%, #1c5380 40%,white 40%) fixed; 
+}
+div.container {
+  display:flex;
+  flex-direction: row;
+  margin: 10% 20%;
+  flex-wrap: wrap;
+}
+
+div.container .phones .img{
+  width: 50%;
+  width: 20px;
+}
+
+div.main {
+  width: 60%;
+  padding-left: 30px
+}
+
+div.main .inst-header{
+  width: 100%;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0px 20px;
+
+}
+div.main .inst-header > img{
+  padding: 0 15px 30px 0;
+  width: 200px;
+} 
+
+div.main header > button{
+  /* margin: 0 15px 30px 0;
+  width: 20px;
+  margin-right: 10px;
+  background-color: blueviolet; */
+  background-color:  #1c5380;
+  border: 1px solid #06365f;
+  padding: 8px 10px;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  border-radius: 3px;
+
+} 
+  
+div.main {
+  display:flex;
+  width: 50%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 5%;
+
+}
+
+div.container .text{
+  display:flex;
+  flex-direction: column;
+  background-color: white;
+  text-align: justify;
+  padding: 30px 20px;
+}
+div.container .text h2{
+  /* text-align: left;
+  width: 60% */
+  font-weight: bold;
+  color: #06365f;
+  font-size: 1.3rem;
+  line-height: 1.5rem;
+  margin: 0;
+
+}
+
+div.container .pictures {
+  margin-top: 30px;
+}
+
+div.container .pictures img {
+  height: 42px;
+  margin-right: 10px;
 }
