feat: Give margin to card

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,8 @@ h1 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
   border-radius: 10px;
+  margin-left: 8rem;
+  margin-top: 4rem;
 }
 
 .card-container {
