--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,96 @@ light blue: #1c5380
 */
 
 body {
+  height: 100vh;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(#1c5380 20%, #06365f 30%, #FFF 30%, #FFF);
+  padding: 50px;
 }
+
+.container {
+  margin: 0 auto;
+  max-width: 1040px;
+}
+main > div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+main > div > div {
+  padding: 0 15px;
+}
+#log-in {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#button {
+  background-color: #1c5380 ;
+  border-color: 2px solid #06365f;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: bold;
+  display: flex;
+  justify-items: auto;
+  align-items: center;
+  border-width: 3px ;
+}
+
+#img-phones {
+  flex-grow: 1;
+}
+
+#information {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  align-content: center;
+  justify-content: space-around;
+  position: relative;
+
+}
+
+#download-stores {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding-left: 0;
+  list-style: none;
+}
+
+#download-stores li:first-child {
+  margin-right: 15px;
+}
+
+#main-text {
+  background-color: #fff;
+  position: relative;
+  border-radius: 3px;
+  padding: 30px;
+}
+
+footer {
+  display: flex;
+  align-items: baseline;
+  text-transform: uppercase;
+  font-size: 10px;;
+}
+
+footer ul {
+  display: flex;
+  list-style: none;
+}
+ 
+footer ul li {
+  margin: auto 1rem auto;
+  color: #3a6890;
+  font-weight: 600;
+  font-size: 13px;
+}
+
