--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,110 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+a {
+  text-decoration: none;
+}
+
+main {
+  margin: 150px auto;
+  width: 900px;
+}
+
+.flex {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+}
+
+section {
+  align-self: auto;
+}
+
+.section-right {
+  padding: 0 43px;
+  display: flex;
+  flex-flow: column;
+}
+
+.Logo {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  padding-bottom: 20px;
+  align-items: center;
+}
+
+.Logo>a {
+  background: rgb(28, 83, 128);
+  background: linear-gradient(0deg, rgba(28, 83, 128, 1) 0%, rgba(0, 212, 255, 1) 100%);
+  border: 1px solid #06365f;
+  padding: 10px;
+  color: white;
+  font-size: 0.8em;
+  font-weight: 600;
+}
+
+.buttons {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 35px;
+}
+
+h1 {
+  color: #06365f;
+  line-height: initial;
+  font-size: 2em;
+  font-weight: 600;
+  padding-bottom: 20px;
+}
+
+p {
+  padding: 10px 0;
+}
+
+.buttons>a {
+  margin-top: 20px;
+}
+
+.nav-bar {
+  margin: 0 auto;
+  padding: 20px;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 0.8em;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-around;
+}
+
+li:last-child {
+  color: #949494;
+}
+
+/*Styles Nav*/
+
+.badges {
+  padding-top: 30px;
+}
+
+span {
+  font-weight: 900;
 }
