--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,71 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0;
+  padding: 0;
+
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: red;
+}
+
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  padding: 50px;
+  background-size: 100% 40%;
+  background-image: url("../images/bgtile.png");
+  background-repeat: no-repeat;
+}
+
+.iconos{
+  display: flex;
+  justify-content: space-between;
+}
+
+.text-right{
+ margin: 0 100px;
+
+
+}
+
+.button{
+  width: 10%;
+background-color: blue;
+padding: 3px;
+border: 1px solid darkblue;
+vertical-align: center;
+}
+
+.text-box{
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-position: top;
+  padding: 20px;
+
+}
+
+nav{
+  text-align: center;
+}
+
+ul{
+  list-style-type: none;
+}
+
+nav a{
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+li{
+  display: inline;
 }
