--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,88 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  height: 100vh;
+  background: linear-gradient(#1c5380 20%, #06365f 30%, #fff 30%, #fff);
+  padding: 50px;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1000px;
+}
+
+.block {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.phoneSpace {
+  padding: 0 20px;
+}
+.phone {
+  flex-grow: 1;
+}
+.logoInsta {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.appStores {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding-left: 0;
+  list-style: none;
+}
+.app {
+  margin-right: 15px;
+}
+.home {
+  background-color: #1c5380;
+  border-color: 2px solid #06365f;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: bold;
+  display: flex;
+  justify-items: auto;
+  align-items: center;
+  border-width: 3px;
+}
+.columna {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  align-content: center;
+  justify-content: space-around;
+  position: relative;
+}
+
+.text {
+  background-color: white;
+  position: relative;
+  padding: 20px;
+  border-radius: 2px;
+}
+
+footer {
+  font-size: 15px;
+  display: flex;
+  align-items: baseline;
+  text-transform: uppercase;
+}
+footer ul {
+  display: flex;
+  list-style: none;
+}
+
+footer li {
+  margin: auto 1rem auto;
+  color: #3a6890;
+  font-weight: 600;
+  font-size: 13px;
 }
