--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,100 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background: linear-gradient( #5f97c7, #1c5380);
+  background-size: 100% 40%;
+  background-repeat: no-repeat;
+}
+
+#sectionid {
+  width: 70%;
+  padding: 10% 10% ;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.section1 {
+  padding: 0 5%;
+}
+
+.introsection2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  
+}
+
+button {
+  color: white;
+  width: 100px;
+  height: 40px;
+  padding: 2px 5px;
+  margin-right: 6px;
+  display: flex;
+  background: linear-gradient( #7baedb, #3173ac );
+  border-style: none;
+  border-radius: 4px;
+  justify-content: space-evenly;
+  align-items: center;
+    
+}
+
+.text {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+h1 {
+ padding: 30px;
+ color: #06365f;
+}
+
+p {
+  padding-bottom: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 14px;
+}
+
+.buttons {
+  padding-top: 60px;
+  padding-left: 30px;
+  
+}
+
+#android {
+  padding-left: 10px;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  
+
+}
+
+footer a{
+  padding: 1% 1%;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: bold;
+  color: #1c5380;
+}
+
+#copy {
+  color: gray;
 }
